<resources>
    <string name="app_name">CrossVsZero</string>
    <string name="main_title">CROSS vs ZERO</string>
    <string name="main_exit">EXIT</string>
    <string name="main_play">PLAY</string>
    <string name="game_back">BACK TO MENU</string>
    <string name="main_version">Version: alpha_1.2</string>
    <string name="restart_game">restart game</string>
    <string name="version_click_message">ENJOY THE GAME!</string>
    <string name="cross_turn">cross turn</string>
    <string name="zero_turn">zero turn</string>
    <string name="turn">turn</string>
    <string name="cross_win">cross win</string>
    <string name="zero_win">zero win</string>
    <string name="win">win</string>
    <string name="no_winner">no winner</string>
    <string name="select_players">SELECT PLAYERS</string>
    <string name="select_player">SELECT PLAYER</string>
    <string name="name">Name:</string>
    <string name="victories">Victories:</string>
    <string name="defeats">Defeats:</string>
    <string name="players_list_is_empty">PLAYERS LIST IS EMPTY</string>
    <string name="x_player">X-PLAYER:</string>
    <string name="o_player">O-PLAYER:</string>
    <string name="add_x_player_description">add x-player</string>
    <string name="add_o_player_description">add o-player</string>
    <string name="clear_x_player_description">clear x-player</string>
    <string name="clear_o_player_description">clear o-player</string>
    <string name="start">START</string>
    <string name="enter_new_player_name">Enter new player name</string>
    <string name="player_not_created">FAILURE:\nPlayer already exists!</string>
    <string name="player_created">SUCCESS:\nPlayer created!</string>
    <string name="ru">Ru</string>
    <string name="en">En</string>
    <string name="title_rules_ru">правила игры:</string>
    <string name="title_rules_en">game rules:</string>
    <string name="title_features_en">features:</string>
    <string name="title_features_ru">особенности:</string>
    <string name="rules_en">Greetings player!\n\nThe victory conditions in this game are classic - the winner is the one who collected one row of three pieces vertically, horizontally or diagonally.\n\nHowever, now there is a peculiarity in the process of the game. If there are already three pieces on the field, then on the next move the piece that was placed before all the others will be removed from the field. This piece will be specially marked during the player\'s turn.\n\nExample: if a player has made three moves, then after the fourth move the piece that was marked on the first move will be removed, and after the fifth move the piece marked on the second move will be removed, and so on.
    </string>
    <string name="rules_ru">Приветствую тебя игрок!\n\nУсловия победы в этой игре классические – победу получает тот, кто собрал один ряд из трёх фигур по вертикали, горизонтали или диагонали.\n\nОднако теперь в процессе игры есть особенность. Если на поле уже присутствует три фигуры игрока, то на следующем ходу с поля будет удалена та фигура игрока, которая была поставлена раньше всех остальных. Такая фигура будет специально отмечена во время хода игрока.\n\nПример: если игрок сделал три хода, то после совершения четвёртого хода будет удалена та фигура, которая была отмечена на первом ходу, а после пятого хода исчезнет фигура, отмеченная на втором ходе и так далее.
    </string>
    <string name="features_ru">Вы можете активировать режим выбора игроков, что позволит вам создавать и выбирать участников игры. В таком режиме всегда будут сохраняться результаты игры для каждого из игроков. Это может быть полезно для отслеживания своей статистики или вы можете устраивать небольшие чемпионаты.
    </string>
    <string name="features_en">You can activate the player selection mode, which allows you to create and select the participants of the game. This mode will always save the game results for each player. This can be useful for tracking your statistics or you can organize small championships.
    </string>
    <string name="stat">STAT</string>
    <string name="info">INFO</string>
    <string name="statistic_title">players statistic:</string>
    <string name="no_statistic">NO STATISTIC\n\nYou must create the players!</string>
    <string name="delete_player">delete_player</string>
    <string name="unknown_viewholder_create">Unknown ViewHolder type for create</string>
    <string name="unknown_viewholder_bind">Unknown ViewHolder type for bind</string>
    <string name="clean_up_statistic">Clean up statistic</string>
    <string name="delete_player_menu">Delete player</string>
</resources>