<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/classic_size_16dp"
    android:layout_marginEnd="@dimen/classic_size_16dp"
    android:layout_marginVertical="@dimen/classic_size_8dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/classic_size_8dp"
    app:cardBackgroundColor="@android:color/transparent"
    android:foreground="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/player_list_item_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/grey_pale"
            android:layout_marginStart="@dimen/classic_size_16dp"
            android:layout_marginTop="@dimen/classic_size_8dp"
            android:textAppearance="@style/bigTextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvVictories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/victories"
            android:textColor="@color/grey_pale"
            android:layout_marginStart="@dimen/classic_size_16dp"
            android:layout_marginTop="@dimen/classic_size_4dp"
            android:textAppearance="@style/smallTextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"/>

        <TextView
            android:id="@+id/tvDefeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defeats"
            android:textColor="@color/grey_pale"
            android:layout_marginStart="@dimen/classic_size_16dp"
            android:layout_marginTop="@dimen/classic_size_4dp"
            android:layout_marginBottom="@dimen/classic_size_8dp"
            android:textAppearance="@style/smallTextAppearance"
            app:layout_constraintStart_toStartOf="@id/glCenter"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
    

    

</androidx.cardview.widget.CardView>