<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackgroundColor"
    tools:context=".ui.fragments.StatisticFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/StatRightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/StatLeftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbStatisticToolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back_dots"
        app:layout_constrainedWidth="true"
        app:titleTextColor="@color/grey_pale"
        app:titleTextAppearance="@style/bigTextAppearance"
        app:title="@string/game_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPlayersStatTitle"
        app:layout_constraintTag="stat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic_title"
        android:fontFamily="@font/prog"
        android:letterSpacing="0"
        android:textFontWeight="500"
        android:textSize="@dimen/classic_text_22sp"
        android:textColor="?attr/elementColorGrey"
        android:textAllCaps="true"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="@dimen/classic_size_32dp"
        app:layout_constraintTop_toBottomOf="@id/tbStatisticToolBar"
        app:layout_constraintStart_toStartOf="@id/StatLeftBorder"
        app:layout_constraintEnd_toEndOf="@id/StatRightBorder"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlayersStatList"
        app:layout_constraintTag="stat_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="@dimen/classic_size_24dp"
        android:layout_marginBottom="@dimen/classic_size_32dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/StatRightBorder"
        app:layout_constraintStart_toStartOf="@id/StatLeftBorder"
        app:layout_constraintTop_toBottomOf="@id/tvPlayersStatTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/stat_list_item"/>

    <TextView
        android:id="@+id/tvNoStatText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_statistic"
        android:textColor="@color/crimson"
        android:textAppearance="@style/bigTextAppearance"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/StatLeftBorder"
        app:layout_constraintEnd_toEndOf="@id/StatRightBorder"
        app:layout_constraintTop_toBottomOf="@id/tbStatisticToolBar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grStatisticEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_tags="stat_title, stat_list" />


</androidx.constraintlayout.widget.ConstraintLayout>