<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginVertical="@dimen/classic_size_8dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/classic_size_8dp"
    app:cardBackgroundColor="@android:color/transparent"
    android:foreground="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/player_list_item_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glDeleteDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.84"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:maxLines="1"
            android:textColor="@color/grey_pale"
            android:layout_marginStart="@dimen/classic_size_16dp"
            android:layout_marginTop="@dimen/classic_size_8dp"
            android:textAppearance="@style/bigTextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="SomeGamerName"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/crimson"
            android:layout_marginEnd="@dimen/classic_size_8dp"
            android:textAppearance="@style/bigTextAppearance"
            app:layout_constraintStart_toStartOf="@id/tvVictoriesValue"
            app:layout_constraintTop_toTopOf="@id/tvName"
            app:layout_constraintEnd_toEndOf="@id/glDeleteDivider"
            app:layout_constraintBottom_toTopOf="@id/tvVictories"/>

        <TextView
            android:id="@+id/tvVictories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/victories"
            android:textColor="@color/grey_pale"
            android:maxLines="1"
            android:layout_marginStart="@dimen/classic_size_16dp"
            android:layout_marginTop="@dimen/classic_size_4dp"
            android:textAppearance="@style/smallTextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameValue"
            app:layout_constraintBottom_toTopOf="@id/tvDefeats"/>

        <TextView
            android:id="@+id/tvVictoriesValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            tools:text="131456"
            android:textColor="@color/grey_pale"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginStart="@dimen/classic_size_8dp"
            android:layout_marginEnd="@dimen/classic_size_8dp"
            android:textAppearance="@style/smallTextAppearance"
            app:layout_constraintStart_toEndOf="@id/tvVictories"
            app:layout_constraintTop_toTopOf="@id/tvVictories"
            app:layout_constraintEnd_toEndOf="@id/glDeleteDivider"/>

        <TextView
            android:id="@+id/tvDefeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defeats"
            android:textColor="@color/grey_pale"
            android:maxLines="1"
            android:layout_marginStart="@dimen/classic_size_16dp"
            android:layout_marginTop="@dimen/classic_size_4dp"
            android:layout_marginBottom="@dimen/classic_size_8dp"
            android:textAppearance="@style/smallTextAppearance"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVictories" />

        <TextView
            android:id="@+id/tvDefeatsValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            tools:text="3648"
            android:textColor="@color/grey_pale"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="@dimen/classic_size_8dp"
            android:textAppearance="@style/smallTextAppearance"
            app:layout_constraintStart_toStartOf="@id/tvVictoriesValue"
            app:layout_constraintTop_toTopOf="@id/tvDefeats"
            app:layout_constraintEnd_toEndOf="@id/glDeleteDivider"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingVertical="@dimen/classic_size_12dp"
            app:layout_constraintTop_toTopOf="@id/tvName"
            app:layout_constraintBottom_toBottomOf="@id/tvDefeats"
            app:layout_constraintStart_toEndOf="@id/glDeleteDivider"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/ivDeletePlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/delete_player"
                android:src="@drawable/more_vert"
                app:layout_constrainedWidth="true" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>