<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainTopBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainBottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainRightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainLeftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <ImageView
        android:id="@+id/mainBackgroundAnimated"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.05"
        android:scaleType="centerCrop"
        android:src="@drawable/anim_main_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/testZero"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:scaleType="fitCenter"-->
<!--        android:src="@drawable/anim_zero_scale"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/imageTitle" />-->

    <ImageView
        android:id="@+id/imageTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/cvz_title"
        app:layout_constraintDimensionRatio="10:1"
        app:layout_constraintEnd_toStartOf="@id/mainRightBorder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/mainLeftBorder"
        app:layout_constraintTop_toBottomOf="@id/mainTopBorder"
        app:tint="@color/grey_pale" />

    <Button
        android:id="@+id/playButton"
        style="@style/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/main_play"
        android:textSize="@dimen/classic_text_22sp"
        android:textColor="@color/grey_pale"
        app:strokeColor="@color/grey_pale"
        app:strokeWidth="1dp"
        android:clickable="true"
        android:fontFamily="@font/prog"
        android:textFontWeight="300"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/mainLeftBorder"
        app:layout_constraintEnd_toStartOf="@id/mainRightBorder"
        app:layout_constraintTop_toBottomOf="@id/mainTopBorder"
        app:layout_constraintBottom_toTopOf="@id/exitButton"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <Button
        android:id="@+id/exitButton"
        style="@style/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/main_exit"
        android:textSize="@dimen/classic_text_22sp"
        android:textColor="@color/grey_pale"
        app:strokeColor="@color/grey_pale"
        app:strokeWidth="1dp"
        android:clickable="true"
        android:fontFamily="@font/prog"
        android:textFontWeight="300"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/classic_size_16dp"
        app:layout_constraintStart_toEndOf="@id/mainLeftBorder"
        app:layout_constraintEnd_toStartOf="@id/mainRightBorder"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintBottom_toBottomOf="@id/mainBottomBorder"
        />

    <TextView
        android:id="@+id/mainVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:gravity="center"
        android:fontFamily="@font/prog"
        android:textFontWeight="400"
        android:textColor="@color/grey_pale"
        android:alpha="0.36"
        android:textSize="@dimen/classic_text_14sp"
        android:text="@string/main_version"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/mainRightBorder"
        app:layout_constraintStart_toEndOf="@id/mainLeftBorder"
        app:layout_constraintTop_toBottomOf="@id/mainBottomBorder" />

</androidx.constraintlayout.widget.ConstraintLayout>